--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -4,6 +4,7 @@
     min-height: 100%;
     transition: margin-left .28s;
     margin-left: 180px;
+    top: 50px;
     position: relative;
   }
   // 侧边栏
@@ -13,7 +14,7 @@
     height: 100%;
     position: fixed;
     font-size: 0px;
-    top: 0;
+    top: 50px;
     bottom: 0;
     left: 0;
     z-index: 1001;
